# PyPDTSP

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
examples/: README.md  basic_hgs.py  grubhub_matrix.py
instances/: README.md
pdtsp/: __init__.py  _io.py  parameters.py  solver.py
pdtsp/tests/: test_io.py  test_parameters.py  test_solver_smoke.py
