[build-system]
# setuptools>=77 is the first version to understand PEP 639 (`license = "MIT"`
# as an SPDX string + `license-files = [...]`). That version of setuptools
# imports `packaging.licenses`, which was added in packaging 24.2 — so we
# pin both. Without the explicit packaging pin, cibuildwheel's build
# isolation has been observed to pull an older packaging and crash with
# `ImportError: Cannot import packaging.licenses`.
requires = ["setuptools>=77", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdtsp"
version = "0.1.0"
description = "Python wrapper for the PDP-HGS and PDP-RR solvers (vidalt/PDTSP) for the Pickup-and-Delivery Traveling Salesman Problem"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Changhyun Kwon", email = "changhyun.kwon@omelet.ai" },
]
keywords = [
    "PDTSP",
    "pickup-and-delivery",
    "TSP",
    "vehicle routing",
    "metaheuristic",
    "HGS",
    "ruin and recreate",
    "operations research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/chkwon/PyPDTSP"
Issues = "https://github.com/chkwon/PyPDTSP/issues"
"PDTSP Paper" = "https://doi.org/10.1287/trsc.2022.1170"
"Upstream Source" = "https://github.com/vidalt/PDTSP"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdtsp*"]

[tool.setuptools.package-data]
pdtsp = ["pdphgs", "pdphgs.exe", "pdprr", "pdprr.exe"]

# -----------------------------------------------------------------------------
# cibuildwheel — release.yml drives this; the matrix is intentionally narrow
# (CPython 3.10–3.13, x86_64 + arm64 on macOS, x86_64 on Linux, AMD64 on
# Windows). musllinux and PyPy are skipped because Boost wheels there are
# fragile and out of scope for v0.1.
# -----------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686 pp*"
test-requires = "pytest"
# --pyargs imports the test modules from the installed wheel's
# site-packages copy rather than the source tree, mirroring the
# pattern in .github/workflows/ci.yml and dodging the local-source-dir
# shadowing we hit during CI debugging.
test-command = "pytest --pyargs pdtsp.tests -v"
build-verbosity = 1

[tool.cibuildwheel.linux]
# Pin the AlmaLinux 9 manylinux image: it ships dnf + Boost 1.75+ with
# the per-component CMake configs (`boost_program_options-config.cmake`
# etc.) that our patched CMakeLists.txt expects. The older default
# `manylinux2014` image (CentOS 7, Boost 1.69 via yum) lacks those
# configs and the upstream find_package call fails.
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y boost-devel || yum install -y boost-devel"

[tool.cibuildwheel.macos]
before-all = "brew install boost cmake"
# arm64 only for v0.1.0. GitHub's macos-latest runners are Apple Silicon
# and brew's Boost binary is arm64-only. Cross-compiling an x86_64 wheel
# from the arm64 runner fails to link against the brew-arm64 libboost_*,
# producing "symbol(s) not found for architecture x86_64" at link time.
# A proper x86_64 build needs an x86_64 Boost source (e.g. compiled in
# Rosetta or fetched from a different package manager) — out of scope
# for v0.1.0. Intel Mac users can install from sdist.
archs = ["arm64"]

# Windows wheels deferred to v0.2 — vcpkg's per-component Boost ports
# don't integrate with the umbrella `find_package(Boost ...)` call that
# CMake's BoostConfig.cmake / FindBoost.cmake paths expect, and the patch
# in setup.py works only on brew + apt + dnf today. Until that's
# resolved, Windows users build from sdist (`pip install pdtsp` with
# MSVC + Boost on PATH).
